Parser/.antlr/DaedalusParser.java
// Generated from b:\Source\DaedalusLanguageServer\Parser\Daedalus.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DaedalusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, Const=34, Var=35, If=36, Int=37, Else=38, Func=39, 
		String=40, Class=41, Void=42, Return=43, Float=44, Prototype=45, Instance=46, 
		Null=47, NoFunc=48, Identifier=49, IntegerLiteral=50, FloatLiteral=51, 
		StringLiteral=52, Whitespace=53, Newline=54, BlockComment=55, LineComment=56;
	public static final int
		RULE_daedalusFile = 0, RULE_blockDef = 1, RULE_inlineDef = 2, RULE_functionDef = 3, 
		RULE_constDef = 4, RULE_classDef = 5, RULE_prototypeDef = 6, RULE_instanceDef = 7, 
		RULE_instanceDecl = 8, RULE_varDecl = 9, RULE_constArrayDef = 10, RULE_constArrayAssignment = 11, 
		RULE_constValueDef = 12, RULE_constValueAssignment = 13, RULE_varArrayDecl = 14, 
		RULE_varValueDecl = 15, RULE_parameterList = 16, RULE_parameterDecl = 17, 
		RULE_statementBlock = 18, RULE_statement = 19, RULE_funcCall = 20, RULE_assignment = 21, 
		RULE_ifCondition = 22, RULE_elseBlock = 23, RULE_elseIfBlock = 24, RULE_ifBlock = 25, 
		RULE_ifBlockStatement = 26, RULE_returnStatement = 27, RULE_funcArgExpression = 28, 
		RULE_expressionBlock = 29, RULE_expression = 30, RULE_arrayIndex = 31, 
		RULE_arraySize = 32, RULE_value = 33, RULE_referenceAtom = 34, RULE_reference = 35, 
		RULE_typeReference = 36, RULE_anyIdentifier = 37, RULE_nameNode = 38, 
		RULE_parentReference = 39, RULE_assignmentOperator = 40, RULE_addOperator = 41, 
		RULE_bitMoveOperator = 42, RULE_compOperator = 43, RULE_eqOperator = 44, 
		RULE_oneArgOperator = 45, RULE_multOperator = 46, RULE_binAndOperator = 47, 
		RULE_binOrOperator = 48, RULE_logAndOperator = 49, RULE_logOrOperator = 50;
	public static final String[] ruleNames = {
		"daedalusFile", "blockDef", "inlineDef", "functionDef", "constDef", "classDef", 
		"prototypeDef", "instanceDef", "instanceDecl", "varDecl", "constArrayDef", 
		"constArrayAssignment", "constValueDef", "constValueAssignment", "varArrayDecl", 
		"varValueDecl", "parameterList", "parameterDecl", "statementBlock", "statement", 
		"funcCall", "assignment", "ifCondition", "elseBlock", "elseIfBlock", "ifBlock", 
		"ifBlockStatement", "returnStatement", "funcArgExpression", "expressionBlock", 
		"expression", "arrayIndex", "arraySize", "value", "referenceAtom", "reference", 
		"typeReference", "anyIdentifier", "nameNode", "parentReference", "assignmentOperator", 
		"addOperator", "bitMoveOperator", "compOperator", "eqOperator", "oneArgOperator", 
		"multOperator", "binAndOperator", "binOrOperator", "logAndOperator", "logOrOperator"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "','", "'{'", "'}'", "'('", "')'", "'['", "']'", "'='", "'.'", 
		"'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'<<'", "'>>'", "'<'", "'>'", 
		"'<='", "'>='", "'=='", "'!='", "'!'", "'~'", "'*'", "'/'", "'%'", "'&'", 
		"'|'", "'&&'", "'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "Const", "Var", 
		"If", "Int", "Else", "Func", "String", "Class", "Void", "Return", "Float", 
		"Prototype", "Instance", "Null", "NoFunc", "Identifier", "IntegerLiteral", 
		"FloatLiteral", "StringLiteral", "Whitespace", "Newline", "BlockComment", 
		"LineComment"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Daedalus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DaedalusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DaedalusFileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DaedalusParser.EOF, 0); }
		public List<BlockDefContext> blockDef() {
			return getRuleContexts(BlockDefContext.class);
		}
		public BlockDefContext blockDef(int i) {
			return getRuleContext(BlockDefContext.class,i);
		}
		public List<InlineDefContext> inlineDef() {
			return getRuleContexts(InlineDefContext.class);
		}
		public InlineDefContext inlineDef(int i) {
			return getRuleContext(InlineDefContext.class,i);
		}
		public DaedalusFileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_daedalusFile; }
	}

	public final DaedalusFileContext daedalusFile() throws RecognitionException {
		DaedalusFileContext _localctx = new DaedalusFileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_daedalusFile);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					setState(104);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(102);
						blockDef();
						}
						break;
					case 2:
						{
						setState(103);
						inlineDef();
						}
						break;
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockDefContext extends ParserRuleContext {
		public FunctionDefContext functionDef() {
			return getRuleContext(FunctionDefContext.class,0);
		}
		public ClassDefContext classDef() {
			return getRuleContext(ClassDefContext.class,0);
		}
		public PrototypeDefContext prototypeDef() {
			return getRuleContext(PrototypeDefContext.class,0);
		}
		public InstanceDefContext instanceDef() {
			return getRuleContext(InstanceDefContext.class,0);
		}
		public BlockDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockDef; }
	}

	public final BlockDefContext blockDef() throws RecognitionException {
		BlockDefContext _localctx = new BlockDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_blockDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Func:
				{
				setState(111);
				functionDef();
				}
				break;
			case Class:
				{
				setState(112);
				classDef();
				}
				break;
			case Prototype:
				{
				setState(113);
				prototypeDef();
				}
				break;
			case Instance:
				{
				setState(114);
				instanceDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(118);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0) {
				{
				setState(117);
				match(T__0);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineDefContext extends ParserRuleContext {
		public ConstDefContext constDef() {
			return getRuleContext(ConstDefContext.class,0);
		}
		public VarDeclContext varDecl() {
			return getRuleContext(VarDeclContext.class,0);
		}
		public InstanceDeclContext instanceDecl() {
			return getRuleContext(InstanceDeclContext.class,0);
		}
		public InlineDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineDef; }
	}

	public final InlineDefContext inlineDef() throws RecognitionException {
		InlineDefContext _localctx = new InlineDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_inlineDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Const:
				{
				setState(120);
				constDef();
				}
				break;
			case Var:
				{
				setState(121);
				varDecl();
				}
				break;
			case Instance:
				{
				setState(122);
				instanceDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(125);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefContext extends ParserRuleContext {
		public TerminalNode Func() { return getToken(DaedalusParser.Func, 0); }
		public TypeReferenceContext typeReference() {
			return getRuleContext(TypeReferenceContext.class,0);
		}
		public NameNodeContext nameNode() {
			return getRuleContext(NameNodeContext.class,0);
		}
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public FunctionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDef; }
	}

	public final FunctionDefContext functionDef() throws RecognitionException {
		FunctionDefContext _localctx = new FunctionDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(Func);
			setState(128);
			typeReference();
			setState(129);
			nameNode();
			setState(130);
			parameterList();
			setState(131);
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDefContext extends ParserRuleContext {
		public TerminalNode Const() { return getToken(DaedalusParser.Const, 0); }
		public TypeReferenceContext typeReference() {
			return getRuleContext(TypeReferenceContext.class,0);
		}
		public List<ConstValueDefContext> constValueDef() {
			return getRuleContexts(ConstValueDefContext.class);
		}
		public ConstValueDefContext constValueDef(int i) {
			return getRuleContext(ConstValueDefContext.class,i);
		}
		public List<ConstArrayDefContext> constArrayDef() {
			return getRuleContexts(ConstArrayDefContext.class);
		}
		public ConstArrayDefContext constArrayDef(int i) {
			return getRuleContext(ConstArrayDefContext.class,i);
		}
		public ConstDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDef; }
	}

	public final ConstDefContext constDef() throws RecognitionException {
		ConstDefContext _localctx = new ConstDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133);
			match(Const);
			setState(134);
			typeReference();
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(135);
				constValueDef();
				}
				break;
			case 2:
				{
				setState(136);
				constArrayDef();
				}
				break;
			}
			setState(146);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1) {
				{
				{
				setState(139);
				match(T__1);
				setState(142);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(140);
					constValueDef();
					}
					break;
				case 2:
					{
					setState(141);
					constArrayDef();
					}
					break;
				}
				}
				}
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDefContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(DaedalusParser.Class, 0); }
		public NameNodeContext nameNode() {
			return getRuleContext(NameNodeContext.class,0);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDef; }
	}

	public final ClassDefContext classDef() throws RecognitionException {
		ClassDefContext _localctx = new ClassDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_classDef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(Class);
			setState(150);
			nameNode();
			setState(151);
			match(T__2);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(152);
					varDecl();
					setState(153);
					match(T__0);
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(160);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrototypeDefContext extends ParserRuleContext {
		public TerminalNode Prototype() { return getToken(DaedalusParser.Prototype, 0); }
		public NameNodeContext nameNode() {
			return getRuleContext(NameNodeContext.class,0);
		}
		public ParentReferenceContext parentReference() {
			return getRuleContext(ParentReferenceContext.class,0);
		}
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public PrototypeDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prototypeDef; }
	}

	public final PrototypeDefContext prototypeDef() throws RecognitionException {
		PrototypeDefContext _localctx = new PrototypeDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_prototypeDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(Prototype);
			setState(163);
			nameNode();
			setState(164);
			match(T__4);
			setState(165);
			parentReference();
			setState(166);
			match(T__5);
			setState(167);
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceDefContext extends ParserRuleContext {
		public TerminalNode Instance() { return getToken(DaedalusParser.Instance, 0); }
		public NameNodeContext nameNode() {
			return getRuleContext(NameNodeContext.class,0);
		}
		public ParentReferenceContext parentReference() {
			return getRuleContext(ParentReferenceContext.class,0);
		}
		public StatementBlockContext statementBlock() {
			return getRuleContext(StatementBlockContext.class,0);
		}
		public InstanceDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceDef; }
	}

	public final InstanceDefContext instanceDef() throws RecognitionException {
		InstanceDefContext _localctx = new InstanceDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instanceDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			match(Instance);
			setState(170);
			nameNode();
			setState(171);
			match(T__4);
			setState(172);
			parentReference();
			setState(173);
			match(T__5);
			setState(174);
			statementBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstanceDeclContext extends ParserRuleContext {
		public TerminalNode Instance() { return getToken(DaedalusParser.Instance, 0); }
		public List<NameNodeContext> nameNode() {
			return getRuleContexts(NameNodeContext.class);
		}
		public NameNodeContext nameNode(int i) {
			return getRuleContext(NameNodeContext.class,i);
		}
		public ParentReferenceContext parentReference() {
			return getRuleContext(ParentReferenceContext.class,0);
		}
		public InstanceDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instanceDecl; }
	}

	public final InstanceDeclContext instanceDecl() throws RecognitionException {
		InstanceDeclContext _localctx = new InstanceDeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_instanceDecl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(Instance);
			setState(177);
			nameNode();
			setState(182);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(178);
					match(T__1);
					setState(179);
					nameNode();
					}
					} 
				}
				setState(184);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			setState(185);
			match(T__4);
			setState(186);
			parentReference();
			setState(187);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TerminalNode Var() { return getToken(DaedalusParser.Var, 0); }
		public TypeReferenceContext typeReference() {
			return getRuleContext(TypeReferenceContext.class,0);
		}
		public List<VarValueDeclContext> varValueDecl() {
			return getRuleContexts(VarValueDeclContext.class);
		}
		public VarValueDeclContext varValueDecl(int i) {
			return getRuleContext(VarValueDeclContext.class,i);
		}
		public List<VarArrayDeclContext> varArrayDecl() {
			return getRuleContexts(VarArrayDeclContext.class);
		}
		public VarArrayDeclContext varArrayDecl(int i) {
			return getRuleContext(VarArrayDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varDecl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(189);
			match(Var);
			setState(190);
			typeReference();
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(191);
				varValueDecl();
				}
				break;
			case 2:
				{
				setState(192);
				varArrayDecl();
				}
				break;
			}
			setState(203);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(195);
					match(T__1);
					setState(199);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						setState(196);
						varDecl();
						}
						break;
					case 2:
						{
						setState(197);
						varValueDecl();
						}
						break;
					case 3:
						{
						setState(198);
						varArrayDecl();
						}
						break;
					}
					}
					} 
				}
				setState(205);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstArrayDefContext extends ParserRuleContext {
		public NameNodeContext nameNode() {
			return getRuleContext(NameNodeContext.class,0);
		}
		public ArraySizeContext arraySize() {
			return getRuleContext(ArraySizeContext.class,0);
		}
		public ConstArrayAssignmentContext constArrayAssignment() {
			return getRuleContext(ConstArrayAssignmentContext.class,0);
		}
		public ConstArrayDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constArrayDef; }
	}

	public final ConstArrayDefContext constArrayDef() throws RecognitionException {
		ConstArrayDefContext _localctx = new ConstArrayDefContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_constArrayDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(206);
			nameNode();
			setState(207);
			match(T__6);
			setState(208);
			arraySize();
			setState(209);
			match(T__7);
			setState(210);
			constArrayAssignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstArrayAssignmentContext extends ParserRuleContext {
		public List<ExpressionBlockContext> expressionBlock() {
			return getRuleContexts(ExpressionBlockContext.class);
		}
		public ExpressionBlockContext expressionBlock(int i) {
			return getRuleContext(ExpressionBlockContext.class,i);
		}
		public ConstArrayAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constArrayAssignment; }
	}

	public final ConstArrayAssignmentContext constArrayAssignment() throws RecognitionException {
		ConstArrayAssignmentContext _localctx = new ConstArrayAssignmentContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constArrayAssignment);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			match(T__8);
			setState(213);
			match(T__2);
			{
			setState(214);
			expressionBlock();
			setState(219);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(215);
					match(T__1);
					setState(216);
					expressionBlock();
					}
					} 
				}
				setState(221);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			}
			setState(222);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstValueDefContext extends ParserRuleContext {
		public NameNodeContext nameNode() {
			return getRuleContext(NameNodeContext.class,0);
		}
		public ConstValueAssignmentContext constValueAssignment() {
			return getRuleContext(ConstValueAssignmentContext.class,0);
		}
		public ConstValueDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constValueDef; }
	}

	public final ConstValueDefContext constValueDef() throws RecognitionException {
		ConstValueDefContext _localctx = new ConstValueDefContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_constValueDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(224);
			nameNode();
			setState(225);
			constValueAssignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstValueAssignmentContext extends ParserRuleContext {
		public ExpressionBlockContext expressionBlock() {
			return getRuleContext(ExpressionBlockContext.class,0);
		}
		public ConstValueAssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constValueAssignment; }
	}
